Fix all spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-html, {
+html {
   background-color: #4f4e4e;
   color: #fff;
 }
@@ -9,7 +9,7 @@ h1 {
   font-style: normal;
 }
 
-h2, p, .footer {
+h2, p {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -17,9 +17,4 @@ h2, p, .footer {
 
 .social-icon {
   width: 20%;
-}
-
-.email {
-  text-decoration: none;
-  color: #fff;
 }
